--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 loom {
     forge {
-        mixinConfig "hexparse.mixins.json"
+//        mixinConfig "hexparse.mixins.json"
     }
 }
 
