--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -27,3 +27,9 @@ versionRange = "[1.19.2,)"
 ordering = "NONE"
 side = "BOTH"
 
+[[dependencies.hexparse]]
+modId = "hexcasting"
+mandatory = true
+versionRange = "[0,)"
+ordering = "AFTER"
+side = "BOTH"
