--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,13 @@ org.gradle.parallel=true
 # Mod properties
 mod_version=0.5
 maven_group=io.yukkuric
-archives_name=hexparse
-enabled_platforms=fabric,neoforge
+archives_name=hexParse
+enabled_platforms=fabric,forge
 # Minecraft properties
 minecraft_version=1.19.2
 # Dependencies
 fabric_loader_version=0.16.9
+fabric_api_version=0.64.0+1.19.2
 forge_version=1.19.2-43.4.5
 
 # hex
