--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -32,6 +32,10 @@ dependencies {
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
 
     modImplementation("at.petra-k.hexcasting:hexcasting-fabric-${project.minecraft_version}:${project.hexcastingVersion}") { transitive = false }
+
+    modApi("me.shedaniel.cloth:cloth-config-fabric:$clothConfigVersion") {
+        exclude(group: "net.fabricmc.fabric-api")
+    }
 }
 
 processResources {
