--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 # Mod properties
-mod_version=1.19.2-0.5
+mod_version=1.20.1-0.5
 maven_group=io.yukkuric
 archives_name=hexParse
 enabled_platforms=fabric,forge
 # Minecraft properties
-minecraft_version=1.19.2
+minecraft_version=1.20.1
 # Dependencies
-fabric_loader_version=0.16.9
-fabric_api_version=0.64.0+1.19.2
-forge_version=1.19.2-43.4.5
+fabric_loader_version=0.14.21
+fabric_api_version=0.85.0+1.20.1
+forge_version=1.20.1-47.2.0
 
 # hex
-hexcastingVersion=0.10.3
+hexcastingVersion=0.11.1-7-pre-637
