--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 # Mod properties
 mod_version=1.20.1-0.5.1
 maven_group=io.yukkuric
-archives_name=hexParse
+archives_name=hexParse_Client
 enabled_platforms=fabric,forge
 # Minecraft properties
 minecraft_version=1.20.1
