--- a/settings.gradle
+++ b/settings.gradle
@@ -7,8 +7,7 @@ pluginManagement {
     }
 }
 
-rootProject.name = 'hexparse'
+rootProject.name = 'hexparse_client'
 
 include 'common'
-include 'fabric'
 include 'forge'
