--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader = "javafml"
 loaderVersion = "[43,)"
-#issueTrackerURL = ""
+issueTrackerURL = "https://github.com/YukkuriC/HexParseMod/issues"
 license = "MIT"
 
 [[mods]]
@@ -11,7 +11,9 @@ authors = "YukkuriC"
 description = '''
 parse pattern registry name code into list iota, and vice versa
 '''
-#logoFile = ""
+logoFile = "logo.png"
+updateJSONURL = "https://api.modrinth.com/updates/WjFyIzFj/forge_updates.json"
+displayURL = "https://modrinth.com/mod/hexparse"
 
 [[dependencies.hexparse]]
 modId = "forge"
