--- a/gradle.properties
+++ b/gradle.properties
@@ -14,4 +14,4 @@ fabric_api_version=0.85.0+1.20.1
 forge_version=1.20.1-47.2.0
 
 # hex
-hexcastingVersion=0.11.1-7-pre-637
+hexcastingVersion=0.11.2-pre-702
