--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,4 +9,12 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
 
     modImplementation("at.petra-k.hexcasting:hexcasting-forge-${project.minecraft_version}:${project.hexcastingVersion}") { transitive = false }
+
+    implementation fileTree(dir: 'libs', include: '*.jar')
+}
+
+repositories {
+    flatDir {
+        dir 'libs'
+    }
 }
