--- a/docgen/syntax.yaml
+++ b/docgen/syntax.yaml
@@ -89,7 +89,7 @@ Plugin Parser Installed:
     Type: String Literal
   - Addon: Hexal
     Example: '`gate`, `gate_114_514_1919`, `gate_0_1_0_self`, `gate_0_deadbeef-c0de-cafe-babe-114514191981`'
-    Output: '`gate` for unbinded gates; with vec3 axes for position-binded ones; with entity UUID or `self` (and/or vec3 axes) for entity-binded ones'
+    Output: '`gate` for unbinded gates; with vec3 axes for position-binded ones; with entity UUID or `self` (and/or vec3 axes) for entity-binded ones;<br>**NOTE: EXTRA COST FOR MAKING GATES**'
     Output Type: '`GateIota`'
     Type: Gate Literal
   headers:
