--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ subprojects {
         // for more information about repositories.
         mavenLocal()
         maven { url "https://maven.blamejared.com/" }
-        flatDir { dir 'libs' }
+        flatDir { dir "libs/$minecraft_version" }
     }
 
     var nameForRef = project.name.equals("common") ? "forge" : project.name
@@ -43,7 +43,7 @@ subprojects {
 
         modImplementation("at.petra-k.hexcasting:hexcasting-${nameForRef}-${project.minecraft_version}:${project.hexcastingVersion}") { transitive = false }
 
-        implementation fileTree(dir: 'libs', include: '*.jar')
+        implementation fileTree(dir: "libs/$minecraft_version", include: '*.jar')
     }
 
     java {
