--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ minecraft_version=1.19.2
 fabric_loader_version=0.16.9
 fabric_api_version=0.64.0+1.19.2
 forge_version=1.19.2-43.4.5
+patchouliVersion=77
 
 # hex
 hexcastingVersion=0.10.3
