--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ minecraft_version=1.20.1
 fabric_loader_version=0.14.21
 fabric_api_version=0.85.0+1.20.1
 forge_version=1.20.1-47.2.0
+patchouliVersion=80
 
 # hex
 hexcastingVersion=0.11.2-pre-702
