--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,8 @@
 org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 # Mod properties
-mod_version=1.19.2-0.8.0
+mod_version_base=0.8.0
+mod_version=DYNAMIC
 maven_group=io.yukkuric
 archives_name=hexParse
 enabled_platforms=fabric,forge
