--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ subprojects {
         flatDir { dir "libs/$minecraft_version" }
     }
 
-    var nameForRef = project.name.equals("common") ? "forge" : project.name
+    var nameForRef = project.name.equals("common") ? "fabric" : project.name
     dependencies {
         minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
         mappings loom.officialMojangMappings()
