add optional dep for uploader

--- a/collector/config.json
+++ b/collector/config.json
@@ -4,6 +4,10 @@
         "dependencies": [
             "nTW3yKrm"
         ],
+        "optional": [
+            "aBVJ6Q36",
+            "Jmt7p37B"
+        ],
         "project_id": "WjFyIzFj"
     },
     "CF": {
