--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -24,6 +24,10 @@ configurations {
     }
 }
 
+repositories {
+    // TODO
+}
+
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:$rootProject.fabric_loader_version"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
@@ -34,6 +38,9 @@ dependencies {
     modApi("me.shedaniel.cloth:cloth-config-fabric:$clothConfigVersion") {
         exclude(group: "net.fabricmc.fabric-api")
     }
+
+    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-base:$cardinalComponentsVersion"
+    modImplementation "dev.onyxstudios.cardinal-components-api:cardinal-components-entity:$cardinalComponentsVersion"
 }
 
 processResources {
