--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     modApi("me.shedaniel.cloth:cloth-config-fabric:$clothConfigVersion") {
         exclude(group: "net.fabricmc.fabric-api")
     }
+    modApi "com.terraformersmc:modmenu:7.2.2"
 }
 
 processResources {
