--- a/common/src/main/resources/data/hexparse/patchouli_books/thehexbook/en_us/entries/commands/config.json
+++ b/common/src/main/resources/data/hexparse/patchouli_books/thehexbook/en_us/entries/commands/config.json
@@ -5,6 +5,9 @@
   "advancement": "hexcasting:root",
   "sortnum": 1,
   "pages": [
-    "pass"
+    "hexparse.book.entry.commands.config.macro",
+    "hexparse.book.entry.commands.config.macro.2",
+    "hexparse.book.entry.commands.config.conflicts",
+    "hexparse.book.entry.commands.config.conflicts.2"
   ]
 }
